# whatsthemove

./: .gitignore  CMakeLists.txt  Engine.hpp  Game.hpp  GameState.hpp  Minimax.cpp  Minimax.hpp  Move.hpp  Player.hpp  README.md  TicTacToe.cpp  TicTacToe.hpp  _clang-format  class diagrams  main.cpp  minimax_worker.cpp
docs/: class diagrams
src/: CMakeLists.txt  Engine.hpp  EnginePlayer.cpp  EnginePlayer.hpp  Game.hpp  GameState.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Minimax.cpp  Minimax.hpp  Move.hpp  Player.hpp  TicTacToe.cpp  TicTacToe.hpp  TicTacToeMove.cpp  TicTacToeMove.hpp  TicTacToeState.cpp  TicTacToeState.hpp  main.cpp  minimax_worker.cpp  worker_minimax.cpp
